# hce_msgs

./: CMakeLists.txt  package.xml
msg/: Data3dmap.msg  DataCamlidarStamped.msg  DataLidar.msg  DataToReconstructor.msg  ExAngle.msg  ExGps.msg  ExMeasure.msg  ExMeasureStamped.msg  ExPressure.msg  ExVelocity.msg  Predictions.msg  StateInput.msg
srv/: CallBluecougar.srv  CallCamlidar.srv  CallDumpDetector.srv  CallGlobalPlanner.srv  CallGridmapshow.srv  CallLocalPlanner.srv  CallReconstructor.srv  CamlidarStamped.srv  ExcavationGlobalPlanning.srv  HceSingleImage.srv
