<?xml version="1.0"?>
<package>
  <name>hce_msgs</name>
  <version>0.0.0</version>
  <description>hce_msgs package</description>

  <maintainer email="wnsgk0264@gmail.com">JunhaKim</maintainer>


  <license>TODO</license>

  <build_depend>excavator_msgs</build_depend> 
  <run_depend>excavator_msgs</run_depend>

  <build_depend>vision_msgs</build_depend> 
  <run_depend>vision_msgs</run_depend> 

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>message_filters</build_depend><!-- New -->
  <run_depend>message_filters</run_depend><!-- New -->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

